<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/apptheme_color"
android:id="@+id/layout_setting"
    tools:context="com.example.wendy_guo.j4sp.view.SettingActivity"
   >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_tab_friends"
        android:background="@color/light_gray"

        />
    <TextView
        android:id="@+id/user_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/photo"
        android:layout_alignParentRight="true"
        />

    <Switch
        android:id="@+id/Quality_Switch"
        android:textColor="@color/text_color"
        android:background="@color/background_blue"
        android:text="@string/setting_image_quality"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>
    <Switch
        android:id="@+id/save_to_gallery_Switch"
        android:textColor="@color/text_color"
        android:text="@string/save_to_gallery_Switch"
        android:background="@color/background_blue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Quality_Switch"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <TextView
    android:id="@+id/currency"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/save_to_gallery_Switch"
    android:background="@color/background_blue"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:text="@string/default_currency"
   />
    <Switch
        android:id="@+id/sync_when_wifi_available_Switch"
        android:textColor="@color/text_color"
        android:background="@color/background_blue"
        android:text="@string/sync_when_wifi_available_Switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currency"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>



    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:textColor="#fff"
        android:text="@string/log_out_button_label"
        android:layout_alignParentBottom="true"
         />

</RelativeLayout>
