<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/apptheme_color"

    tools:context="com.example.wendy_guo.j4sp.view.UploadActivity">

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/merchant_name"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:background="@color/light_purple_button"
        />
    <EditText
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/fileName"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/total_cost"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:background="@color/light_purple_button"
        />
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/total"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/light_purple_button"
        android:text=""
        android:textColor="@color/text_color"
        android:onClick="showDatePickerDialog"/>
    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/date"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/light_purple_button"

        android:hint="@string/comments"
        android:textColor="@color/text_color"
        android:textStyle="italic"/>
    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_button"
        android:background="@color/button_color"

        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment"
        android:layout_above="@+id/sendButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/test"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="35dp"
        android:visibility="gone"/>




</RelativeLayout>
