<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/apptheme_color"
    tools:context="com.example.wendy_guo.j4sp.view.SearchActivity">

    <EditText
        android:id="@+id/search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/searchName"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:background="@color/light_purple_button"
        />
    <EditText
        android:id="@+id/search_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="3dp"
        android:layout_below="@id/search_name"
        android:padding="@dimen/activity_horizontal_margin"
        android:hint="@string/total_cost"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:background="@color/light_purple_button"
        />
    <TextView
        android:id="@+id/search_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/search_total"
        android:layout_marginBottom="3dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/light_purple_button"
        android:text=""
        android:textColor="@color/text_color"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="@color/button_color"

        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
